--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+logging.level.ROOT=INFO
+logging.level.com.educandoweb.course=INFO
+
 spring.h2.console.enabled=true
 
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -7,6 +10,13 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.mail.host=localhost
+spring.mail.port=25
+spring.mail.username=
+spring.mail.password=
+
+spring.thymeleaf.mode=HTML
+
 jhipster.clientApp.name=pedidos
 
 jhipster.security.authentication.jwt.secret=
@@ -15,7 +25,6 @@ jhipster.security.authentication.jwt.base64-secret=Yjg3NTIxYjU4MmQxYzkwN2RkOTA5M
 # Token is valid 24 hours
 jhipster.security.authentication.jwt.token-validity-in-seconds=86400
 jhipster.security.authentication.jwt.token-validity-in-seconds-for-remember-me=2592000
-
 
 jhipster.mail.from=jpedidos@localhost
 jhipster.mail.base-url=http://127.0.0.1:8080
