Todas as classes do Segurança

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-logging.level.ROOT=INFO
-logging.level.com.educandoweb.course=INFO
+logging.level.ROOT=DEBUG
+logging.level.com.educandoweb.course=DEBUG
 
 spring.h2.console.enabled=true
 
