--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,9 @@ jhipster.security.authentication.jwt.token-validity-in-seconds-for-remember-me=2
 
 jhipster.mail.from=jpedidos@localhost
 jhipster.mail.base-url=http://127.0.0.1:8080
+
+img.prefix.client.profile=cp
+img.profile.size=200
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
